fix: [CDNG-7995]: two scrollbars visible (#3105)

--- a/src/modules/70-pipeline/pages/pipelines/PipelinesPage.module.scss
+++ b/src/modules/70-pipeline/pages/pipelines/PipelinesPage.module.scss
@@ -132,11 +132,11 @@
 }
 
 .gridView {
-  height: 100%;
+  height: calc(100% - 76px);
   background-color: var(--grey-50);
   padding: 0 var(--spacing-xxlarge) !important;
   .gridLayout {
-    height: calc(100% - 135px);
+    height: calc(100% - 64px);
     overflow: auto;
     > div {
       padding-top: var(--spacing-medium) !important;
